<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/news"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/cart"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_ball"
        android:icon="@drawable/ic_ball"
        android:title="@string/title_ball" />

    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/friend"
        android:title="@string/title_friend" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/my"
        android:title="@string/title_notifications" />

</menu>
